copied and pasted old project html and css into this new repository.  This was originally completed in August.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+<div class="nav">
+<h2><a href="#">COMPANY</a></h2>
+<ul>
+    <li><a href="#">Contact</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Home</a></li>
+</ul>
+</div>
+
+<div class="heading">
+<h1>THE MORE YOU KNOW</h1>
+</div>
+
+<div class="wrapper1">
+<div class="skybluecontainers">
+</div>
+<div class="skybluecontainers">
+</div>
+<div class="skybluecontainers">
+</div>
+</div>
+
+<div class="wrapper2">
+<div class="orangeboxes">
+</div>
+<div class="orangeboxes">
+</div>
+</div>
+
+<div class="wrapper3">
+<div class="paragraph">
+<p> Game-plan social currency shotgun approach commitment to the cause
+    rock Star/Ninja we've got to manage that low hanging fruit.
+    Viral engagement. Cross-pollination nail jelly to the hothouse wall,
+    so streamline, or future-proof face time. Productize time vampire drink
+    the Kool-aid, so in this space nor baseline and where do we
+    stand on the latest client ask, and execute.  You better eat
+    a reality sandwich before you walk back in that boardroom.
+</p>
+</div>
+<img src="elephantlove.jpg" alt="Elephant family love" class="photo">
+
+
+<footer>
+</footer>
+</body>
+</html>
